[package]
name = "disorder"
version = "1.0.0"
edition = "2024"

[dependencies]
toml = { version = "1.0.3+spec-1.1.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tera = "1.20.1"
inquire = "0.9.4"
walkdir = "2.5.0"
log = "0.4.29"
clap = { version = "4.5.60", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
